--- a/conf.ini
+++ b/conf.ini
@@ -5,7 +5,7 @@ user_agent = your unique user agent here
 
 [credentials]
 username = reddit account username
-password = account's password
+password = accounts password
 
 [update]
 every_days = # days between updating mods & flairs?
